Fix problem with hero text scaling grossly by adding wrap

--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,122 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
+* {
+    font-family: Roboto, sans-serif;
+}
+
 body {
+    height: 100vh;
+    overflow: hidden;
+    margin: 0px;
+    /* top and bottom padding might get messed up so come here
+       if you have issues with header or footer */
     display: flex;
     flex-direction: column;
 }
 
-.header {
-    font-size: 24px;
+h1 {
+    /* hero main text */
+    font-size: 48px;
+    font-weight: 800;
     color: #f9faf8;
+}
+
+ul {
+    font-size: 18px;
+    color: #E5E7EB;   
+    display: flex;
+    list-style: none;
+}
+
+li {
+    padding-left: 35px;
+}
+
+button {
+    background-color: #3882F6;
+    color: #f9faf8;
+    width: 130px;
+    height: 40px;
+    font-size: 20px;
+    font-weight: 700;
+    border-radius: 8px;
+    border: 0px;
+}
+
+.header {
     background-color: #1f2937;
+    /*background-color: red;*/
+    padding: 0px 300px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-ul {
-    display: flex;
+.header-logo {
+    font-size: 24px;
+    color: #f9faf8;
+    font-weight: 700;
 }
+
+
+
+.hero {
+    /* 2nd section umbrella */
+    background-color: #1f2937;
+    padding: 130px 300px 150px 300px;
+
+    display: flex;
+    align-items: flex-start;
+    
+    flex-wrap: wrap;
+
+    gap: 10px 20px;
+}
+
+.hero-words {
+    /* words and button */
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    
+    width: 550px;
+    min-width: 335px;
+    max-width: 545px;
+    margin-right: auto;
+    
+
+}
+
+.hero-image {
+
+}
+
+
+/*
+------425-------**50**--------475--------
+
+i want to hold yo forever
+ill be there forever
+dont walk away
+
+or gap 30%?
+*/
+
+.hero-words > * {
+    margin-bottom: 10px;
+    margin-top: 0px;
+}
+
+
+
+.hero-secondary-text {
+    /* in hero-words to style text */
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+/* ideas for flexing page contents right:
+
+   1. put contents and image in same size boxes and
+      use flex: auto so they grow+shrink as needed.
+      this will keep them  */
